portefaix-policies-0.7.0/kyverno/C0005-container-capabilities/resource.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod-ko-1
spec:
  containers:
  - name: add-capabilities
    image: gcr.io/google-samples/node-hello:1.0
    securityContext:
      capabilities:
        add: ["SYS_TIME"]
---
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod-ko-2
spec:
  containers:
  - name: add-capabilities
    image: gcr.io/google-samples/node-hello:1.0
---
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod-ok
spec:
  containers:
  - name: add-capabilities
    image: gcr.io/google-samples/node-hello:1.0
    securityContext:
      capabilities:
        drop:
          - ALL
