portefaix-policies-0.7.0/kyverno/C0005-container-capabilities/policy-C0005.yaml
# Copyright (C) 2021 Nicolas Lamirault <nicolas.lamirault@gmail.com>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: portefaix-C0005
  annotations:
    policies.kyverno.io/title: Container must drop all capabilities
    policies.kyverno.io/category: BestPractices
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Container
    policies.kyverno.io/description: >-
      Capabilities permit privileged actions without giving full root access. All
      capabilities should be dropped from a pod, with only those required added back.
spec:
  validationFailureAction: audit
  rules:
  - name: check-containers-capabilities
    match:
      resources:
        kinds:
        - Pod
    validate:
      message: "All capabilities should be dropped with only those required added back."
      pattern:
        spec:
          containers:
          - securityContext:
              capabilities:
                drop: ["ALL"]
          =(initContainers):
          - =(securityContext):
              (capabilities):
                drop: ["ALL"]
